# histogram_igt

./: NEWS  meson.build  meson.sh
benchmarks/: gem_exec_reloc.c  gem_exec_trace.c  xe_blt.c
docs/: unigraf.txt
include/: linux_scaffold.h
include/android/: glib.h
include/drm-uapi/: drm_mode.h
lib/: drmtest.c  drmtest.h  gpgpu_fill.c  gpgpu_fill.c.gen.iga64_codes.c  gpgpu_fill.h  gpgpu_shader.c  gpgpu_shader.c.gen.iga64_codes.c  gpgpu_shader.h  gpu_cmds.c  gpu_cmds.h  iga64_macros.h  igt_amd.c  igt_amd.h  igt_asahi.c  igt_asahi.h  igt_aux.c  igt_aux.h  igt_core.c  igt_core.h  igt_debugfs.c  igt_debugfs.h  igt_dp.c  igt_dp.h  igt_fb.c  igt_hdr.c  igt_hdr.h  igt_hook.c  igt_kms.c  igt_kms.h  igt_panthor.c  igt_panthor.h  igt_pipe_crc.c  igt_rand.c  igt_rand.h  igt_sriov_device.c  igt_sriov_device.h  igt_v3d.c  igt_v3d.h  intel_batchbuffer.c  intel_batchbuffer.h  (+11 more)
lib/amdgpu/: amd_command_submission.c  amd_ip_blocks.c  amd_ip_blocks.h
lib/i915/: i915_dp.c  i915_dp.h
lib/monitor_edids/: dp_edids.h  hdmi_edids.h  monitor_edids_helper.c  monitor_edids_helper.h
lib/tests/: igt_kms_array_diff.c  meson.build
lib/xe/: xe_ioctl.c  xe_ioctl.h  xe_legacy.c  xe_query.c  xe_query.h  xe_spin.c  xe_spin.h  xe_sriov_admin.c  xe_sriov_admin.h
runner/: executor.c  executor.h  resultgen.c
scripts/: generate_iga64_codes
scripts/bash_autocompletion/: install_completions.sh
tests/: kms_async_flips.c  kms_atomic_transition.c  kms_bw.c  kms_color.c  kms_color_helper.c  kms_color_pipeline.c  kms_colorop.c  kms_concurrent.c  kms_content_protection.c  kms_cursor_crc.c  kms_cursor_legacy.c  kms_dither.c  kms_explicit_fence.c  kms_flip.c  kms_hdmi_inject.c  kms_hdr.c  kms_histogram.c  kms_invalid_mode.c  kms_plane.c  kms_plane_alpha_blend.c  kms_plane_scaling.c  kms_rotation_crc.c  kms_setmode.c  kms_vrr.c  meson.build  prime_udl.c  sriov_basic.c
tests/amdgpu/: amd_abm.c  amd_assr.c  amd_bypass.c  amd_close_race.c  amd_dp_dsc.c  amd_fuzzing_debugfs.c  amd_fuzzing_kfd.c  amd_fuzzing_sysfs.c  amd_lockdep.c  amd_queue_reset.c  amd_security.c  amd_sysfs_spec.h  amd_userptr_invalidation.c  amd_vpe.c  amd_vpe.h  amd_vpe_cmd.c  meson.build
tests/asahi/: asahi_get_params.c  asahi_get_time.c  meson.build
tests/intel-ci/: i915.blocklist.txt  meson.build  xe.blocklist.txt  xe.bmg.display.blocklist.txt  xe.fast-feedback.testlist  xe.lnl.display.blocklist.txt  xe.nvl.display.blocklist.txt  xe.pm.d3cold.testlist  xe.ptl.core.blocklist.txt  xe.ptl.display.blocklist.txt
tests/intel-ci/hooks/: common.helper.sh  copy_guc_log_on_fail.allowlist  copy_guc_log_on_fail.sh  hook-date.allowlist  hook-date.sh  hooks-wrapper.sh
tests/unigraf/: meson.build  unigraf_connectivity.c  unigraf_lt.c
tools/: gputop.c  igt_power.c  intel_audio_dump.c  intel_backlight.c  intel_display_bandwidth.c  intel_display_poller.c  intel_panel_fitter.c  intel_vbt_decode.c
(+82 files in other folders)
